@@ -315,29 +315,7 @@ public class HyperSearchResults extends JPanel implements EBComponent,
 		}
 		else if (value instanceof HyperSearchResult)
 		{
-			final HyperSearchResult result = (HyperSearchResult)value;
-			final Buffer buffer = result.getBuffer();
-
-			if(buffer == null)
-				return;
-
-			VFSManager.runInAWTThread(new Runnable()
-			{
-				public void run()
-				{
-					int start = result.startPos.getOffset();
-					int end = result.endPos.getOffset();
-					Selection s = new Selection.Range(start,end);
-					EditPane pane = view.goToBuffer(buffer);
-					JEditTextArea textArea = pane.getTextArea();
-					if(textArea.isMultipleSelectionEnabled())
-						textArea.addToSelection(s);
-					else
-						textArea.setSelection(s);
-
-					textArea.moveCaretPosition(end);
-				}
-			});
+			((HyperSearchResult)value).goTo(view);
 		}
 	} //}}}
 
